--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -78,14 +78,50 @@ flutter:
   # fonts:
   #   - family: Schyler
   #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  #       - asset:         - asset: fonts/Schyler-Regular.ttf
+  #       - asset:         - asset: fonts/Schyler-Italic.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
+  #       - asset:         - asset: fonts/TrajanPro.ttf
+  #       - asset:         - asset: fonts/TrajanPro_Bold.ttf
   #         weight: 700
   #
   # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  # see https://flutter.dev/custom-        - asset: fonts/#from-packages
+
+  fonts:
+    - family: JetBrains Mono
+      fonts:
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMono-Bold.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMono-BoldItalic.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMono-ExtraBold.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMono-ExtraBoldItalic.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMono-ExtraLight.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMono-ExtraLightItalic.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMono-Italic.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMono-Light.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMono-LightItalic.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMono-Medium.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMono-MediumItalic.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMono-Regular.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMono-SemiBold.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMono-SemiBoldItalic.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMono-Thin.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMono-ThinItalic.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMonoNL-Bold.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMonoNL-BoldItalic.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMonoNL-ExtraBold.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMonoNL-ExtraBoldItalic.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMonoNL-ExtraLight.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMonoNL-ExtraLightItalic.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMonoNL-Italic.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMonoNL-Light.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMonoNL-LightItalic.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMonoNL-Medium.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMonoNL-MediumItalic.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMonoNL-Regular.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMonoNL-SemiBold.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMonoNL-SemiBoldItalic.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMonoNL-Thin.ttf
+        - asset: fonts/JetBrainsMono/ttf/JetBrainsMonoNL-ThinItalic.ttf
