Live Location Handling

--- a/app/ios/Runner/Info.plist
+++ b/app/ios/Runner/Info.plist
@@ -26,6 +26,10 @@
 	<string>$(FLUTTER_BUILD_NUMBER)</string>
 	<key>LSRequiresIPhoneOS</key>
 	<true/>
+	<!--location tracking permission-->
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<true/>
+	<!--end location permission-->
 	<key>UIApplicationSupportsIndirectInputEvents</key>
 	<true/>
 	<key>UILaunchStoryboardName</key>
