--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
   google_maps_flutter: ^2.5.0
+  http: ^1.1.2
   location: ^5.0.0
 
 dev_dependencies:
