--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   google_maps_flutter: ^2.5.0
   http: ^1.1.2
   location: ^5.0.0
+  url_launcher: ^6.2.3
+  just_audio: ^0.9.36
 
 dev_dependencies:
   flutter_test:
@@ -65,6 +67,8 @@ flutter:
   # assets:
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
